pt-sf/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>Used for the delivery of closed won deals to track the project and time spent.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>