pt-sf/main/default/objects/Project__c/fields/Amount_of_Stories__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Stories__c</fullName>
    <label>Amount of Stories</label>
    <summaryForeignKey>Project_Item__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>