pt-sf/main/default/objects/Project__c/fields/Last_Project_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Project_Update__c</fullName>
    <label>Last Project Update</label>
    <type>DateTime</type>
</CustomField>