pt-sf/main/default/objects/Project__c/fields/Project_Health__c.field-meta.xml
<CustomField>
    <fullName>Project_Health__c</fullName>
    <formula>CASE(&apos;Good&apos;, &apos;Good&apos;, IMAGE(&apos;/resource/1523798147000/GraphicsPackNew/tangodesktopproject/16/theme/dialog-error.png&apos;, &apos;Red&apos;), 

&apos;Ok&apos;, IMAGE(&apos;/resource/1523798147000/GraphicsPackNew/tangodesktopproject/16/theme/emblem-important.png&apos;, &apos;Orange&apos;), 

IMAGE(&apos;/resource/1523798147000/GraphicsPackNew/fatcow/farmfresh/16/tick.png&apos;, &apos;Green&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Health</label>
    <type>Text</type>
</CustomField>