pt-sf/main/default/objects/Project__c/fields/Project_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_URL__c</fullName>
    <formula>HYPERLINK(&apos;https://www.pivotaltracker.com/n/projects/&apos; +  Project_Id__c ,&apos;https://www.pivotaltracker.com/n/projects/&apos; +  Project_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project URL</label>
    <type>Text</type>
</CustomField>