pt-sf/main/default/objects/Project__c/fields/Tracker_Integration__c.field-meta.xml
<CustomField>
    <fullName>Tracker_Integration__c</fullName>
    <formula>CASE(Project_Id__c, null, IMAGE(&apos;/resource/1523798147000/GraphicsPackNew/tangodesktopproject/16/theme/dialog-error.png&apos;, &apos;Red&apos;),

IMAGE(&apos;/resource/1523798147000/GraphicsPackNew/fatcow/farmfresh/16/tick.png&apos;, &apos;Green&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracker Integration</label>
    <type>Text</type>
</CustomField>